<?xml version="1.0" encoding="utf-8"?><!--
Copyright Google Inc. All rights reserved.
Licensed under the Apache License, Version 2.0 (the "License"); you may not use
this file except in compliance with the License. You may obtain a copy of the
License at
      http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software distributed
under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.samples.quickstart.functions.java.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/firebase_lockup_400" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_add_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/header_add_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_add_numbers"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/fieldFirstNumber"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    app:layout_constraintStart_toStartOf="@+id/header_add_numbers"
                    app:layout_constraintTop_toBottomOf="@+id/header_add_numbers"
                    tools:text="1" />

                <TextView
                    android:id="@+id/labelPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/fieldFirstNumber"
                    app:layout_constraintStart_toEndOf="@+id/fieldFirstNumber"
                    app:layout_constraintTop_toTopOf="@+id/fieldFirstNumber" />

                <EditText
                    android:id="@+id/fieldSecondNumber"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    tools:text="1"
                    app:layout_constraintBottom_toBottomOf="@+id/labelPlus"
                    app:layout_constraintStart_toEndOf="@+id/labelPlus"
                    app:layout_constraintTop_toTopOf="@+id/labelPlus" />

                <TextView
                    android:id="@+id/labelEquals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/fieldSecondNumber"
                    app:layout_constraintStart_toEndOf="@+id/fieldSecondNumber"
                    app:layout_constraintTop_toTopOf="@+id/fieldSecondNumber" />

                <EditText
                    android:id="@+id/fieldAddResult"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="number"
                    tools:text="2"
                    app:layout_constraintBottom_toBottomOf="@+id/labelEquals"
                    app:layout_constraintStart_toEndOf="@+id/labelEquals"
                    app:layout_constraintTop_toTopOf="@+id/labelEquals" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonCalculate"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fieldFirstNumber" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_add_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/header_add_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_add_message"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/fieldMessageInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header_add_message"
                    tools:text="some bad message" />

                <EditText
                    android:id="@+id/fieldMessageOutput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/output"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="@+id/fieldMessageInput"
                    app:layout_constraintStart_toStartOf="@+id/fieldMessageInput"
                    app:layout_constraintTop_toBottomOf="@+id/fieldMessageInput"
                    tools:text="some clean message" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignIn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/buttonAddMessage"
                    android:layout_toStartOf="@+id/buttonAddMessage"
                    android:layout_toLeftOf="@+id/buttonAddMessage"
                    android:text="@string/sign_in"
                    app:layout_constraintEnd_toStartOf="@+id/buttonAddMessage"
                    app:layout_constraintTop_toBottomOf="@+id/fieldMessageOutput" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAddMessage"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_message"
                    app:layout_constraintEnd_toEndOf="@+id/fieldMessageOutput"
                    app:layout_constraintTop_toBottomOf="@+id/fieldMessageOutput" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>
